# CodexDesktop-Rebuild

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml
frontend/: index.html  tailwind.config.cjs  vite.config.js
frontend/src/: App.jsx  icons.jsx  index.css
frontend/src/hooks/: useAppSync.js  useBridgeSync.js
scripts/: patch-statsig-logger.js  patch-sunset.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: app_state.rs  bridge.rs  lib.rs  main.rs
ui/: index.html
ui/bridge/: perf-content-visibility.js  tauri-electron-compat.js
