[package]
name = "codex_tauri_refactor"
version = "0.1.0"
description = "Tauri shell for Codex desktop refactor"
authors = ["Codex Refactor"]
edition = "2021"

[lib]
name = "codex_tauri_refactor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }

